<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/device_manage_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/device_manage_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        <ProgressBar
            android:id="@+id/message_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/connection_title"
        style="@style/device_config_info_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/connection_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_manage_app_bar" />

    <TextView
        android:id="@+id/node_id_title"
        style="@style/device_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/node_id"
        app:layout_constraintStart_toStartOf="@+id/connection_title"
        app:layout_constraintTop_toBottomOf="@+id/connection_title" />

    <TextView
        android:id="@+id/node_id"
        style="@style/device_config_param_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/node_id_title"
        tools:text="1" />

    <TextView
        android:id="@+id/activated_cluster_size_title"
        style="@style/device_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cluster_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/connection_title"
        app:layout_constraintTop_toBottomOf="@+id/node_id_title" />

    <TextView
        android:id="@+id/activated_cluster_size"
        style="@style/device_config_param_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activated_cluster_size_title"
        tools:text="0" />

    <TextView
        android:id="@+id/terminal_command_title"
        style="@style/device_config_info_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/terminal_command"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activated_cluster_size_title" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/terminal_command_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/terminal_command_title"
        app:layout_constraintTop_toBottomOf="@+id/terminal_command_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/command_send_button"
        style="@style/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/terminal_command_input" />

    <TextView
        android:id="@+id/log_title"
        style="@style/device_config_info_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terminal_command_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/log_item" />

    <TextView
        android:id="@+id/connecting_text"
        style="@style/connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/connecting_progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connecting_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/device_config_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="node_id_title,connection_title,node_id_spinner,activated_cluster_size_title,activated_cluster_size,log_title,command_send_button,terminal_command_input,terminal_command_title"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/connecting_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="connecting_text,connecting_progressBar"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>

